--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^7.0.4"
+    "nodemailer": "^7.0.4",
+    "uuid": "^11.1.0"
   }
 }
